--- a/assets/wmonk.yaml.template
+++ b/assets/wmonk.yaml.template
@@ -2,7 +2,7 @@
 # Wmonk project configuration file
 
 # Title of project
-<%= title.to_yaml.sub(/^---\n/, '') %>
+<%= title.to_yaml.sub(/^---\n/, '').sub(/\n$/, '') %>
 
 # URLs to initially request
-<%= seed_urls.to_yaml.sub(/^---\n/, '') %>
+<%= seed_urls.to_yaml.sub(/^---\n/, '').sub(/\n$/, '') %>
