Use activerecord instead of anemone for storage--no longer need sutch-anemone. Added tests for Wmonk, project and copy. Allow copying of multiple sites.

--- a/assets/wmonk.yaml.template
+++ b/assets/wmonk.yaml.template
@@ -4,5 +4,8 @@
 # Title of project
 <%= title.to_yaml.sub(/^---\n/, '').sub(/\n$/, '') %>
 
+# Root URLs
+<%= root_urls.to_yaml.sub(/^---\n/, '').sub(/\n$/, '') %>
+
 # URLs to initially request
 <%= seed_urls.to_yaml.sub(/^---\n/, '').sub(/\n$/, '') %>
